--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
+    buildFeatures {
+        viewBinding true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -34,6 +40,9 @@ android {
 }
 
 dependencies {
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    def jetpack_version = "2.1.0"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
@@ -58,4 +67,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+
+    //ROOM Database
+    implementation "androidx.room:room-ktx:$jetpack_version"
+    kapt "androidx.room:room-compiler:$jetpack_version"
+    kapt "com.android.databinding:compiler:$jetpack_version"
+
+    //Shimmer dependency
+    implementation 'com.todkars:shimmer-recyclerview:0.4.1'
+
 }
