--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ android {
 }
 
 dependencies {
-
+    def room_version = "2.3.0"
+    def lifecycle_version = "2.2.0"
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -55,9 +56,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-
-    def room_version = "2.3.0"
 
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
@@ -80,7 +78,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
-    def lifecycle_version = "2.2.0"
 
     // ViewModel
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
@@ -94,5 +91,7 @@ dependencies {
     implementation 'com.todkars:shimmer-recyclerview:0.4.1'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
+    //lottie animations
+    implementation "com.airbnb.android:lottie:3.7.0"
 
 }
